--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,18 +3,17 @@ import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCIE = [
   {
     date: "Actualmente...",
-    title: "Creador de Contenido",
-    company: "Twitch",
+    title: "Pasante de desarrollo web",	
+    company: "EPN",
     description:
-      "Divulgo sobre programación y desarrollo web en diferentes plataformas. Galardonado como mejor creador de contenido de habla no-inglesa en 2022 y mejor comunidad en 2023 por GitHub.",
-    link: "https://twitch.tv/midudev",
+      "Encargado de la toma de requisitos, diseño de base de datos, diseño de UI e implementación del sistema de gestión de atención para los servicios médicos de la DBP.",
   },
   {
-    date: "Septiembre 2022",
-    title: "Principal Frontend Engineer",
-    company: "Adevinta Spain",
+    date: "Agosto 2022 - Julio 2023",
+    title: "Desarrollador móvil Android",
+    company: "Independiente",
     description:
-      "Responsable de la plataforma, componentes y utilidades para la creación y desarrollo de aplicaciones web. Mejora de un 30% en la entrega de software. Implantación de medidas de integración continua y despliegue con A/B testing en más de 15 equipos.",
+      "Resolución de Bugs y mantenimiento a la aplicación móvil Android de American Eagle.",
   },
 ]
 ---
