--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,36 +1,28 @@
 ---
- const personalImageAlt = "Miguel Ángel"
+ const personalImageAlt = "Paúl Román"
 ---
 
 <article class="flex flex-col items-center justify-center gap-8 text-gray-700 dark:text-gray-300 md:flex-row">
   <div
     class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
   >
-    <p>
-      Me llamo Miguel Ángel pero mis amigos me llaman midu. Empecé en la
-      programación con un Amstrad, tenía 10 años. Actualmente estoy <strong
-        >liderando equipos de desarrollo en multinacionales</strong
-      >.
-    </p>
+<p>
+  Mi <strong>propósito</strong> es ayudar a las personas proporcionando herramientas tecnológicas que permitan mejorar su calidad de vida y faciliten sus tareas diarias. 
+  
+</p>
+ 
+  <p>
+    Mi  <strong>misión</strong>  es desarrollar software que facilite la vida de las personas. Sin importar el campo o contexto, mi objetivo es proporcionar herramientas que permitan a los usuarios  <strong>alcanzar sus metas de manera sencilla, intuitiva y eficiente</strong>. 
+  </p>
+  <p>
+    Entre todos los desarrolladores fullstack que también aspiran a marcar la diferencia en este competitivo campo, deseo destacar como alguien <strong>comprometido</strong> con su trabajo y <strong>apasionado</strong> por su carrera, cuyo amor por el <strong>aprendizaje</strong> y el <strong>desarrollo personal </strong>se traduce en mejoras tangibles y en una productividad excepcional. 
+  </p>
 
-    <p>
-      Algunos de mis éxitos incluyen <strong
-        >colaborar con Mozilla para el desarrollo de las primeras apps en su
-        sistema FirefoxOS</strong
-      >. Aunque hoy está desaparecido fue un gran avance en el mundo del
-      desarrollo web.
-    </p>
+</div>
 
-    <p>
-      Como creador de contenido, <strong
-        >cuento con el canal de habla hispana más visto del mundo en la
-        categoría de <em class="italic">Software & Game Development</em> en Twitch</strong
-      >. Mi objetivo es mejorar la empleabilidad de la comunidad hispana y el
-      acceso a contenido de calidad.
-    </p>
-  </div>
 
-  <img width="200" height="200" src="/me.png" alt={personalImageAlt} class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20 " style="object-position: 50% 50%">
+
+  <img width="200" height="200" src="https://avatars.githubusercontent.com/u/98636599?s=400&u=868cf64d369c42fb7f87aba0d273b6489e2d8493&v=4" alt={personalImageAlt} class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20 " style="object-position: 50% 50%">
 
 </article>
 
