--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,13 +26,13 @@ const { description, title } = Astro.props
   </head>
 
   <body class="relative text-black dark:text-white">
-    <div class="absolute inset-0 -z-10 h-full w-full items-center px-5 py-24 [background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]"></div>
+    <div class=" absolute inset-0 -z-10 h-full w-full li items-center px-5 py-24 [background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]"></div>
     <Header />
     <slot />
     <Footer />
     <style is:global>
       :root {
-        color-scheme: light dark;
+        color-scheme: light;
       }
 
       html {
