--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,8 +12,8 @@ import Hero from "@/components/Hero.astro"
 ---
 
 <Layout
-  title="Porfolio de midudev - Desarrollador y Programador Web con 15 años de experiencia"
-  description="Contrata a midudev para crear tu aplicación web o móvil. Desarrollador Web y Creador de Contenido. Especializado en crear aplicaciones únicas."
+  title="Porfolio de Paúl Román - Desarrollador FullStack"
+  description="Soy Paúl Román, un desarrollador FullStack con experiencia en el desarrollo de aplicaciones web y móviles. Conoce más sobre mi experiencia laboral, proyectos y habilidades"
 >
   <main class="px-4">
     <SectionContainer class="py-16 md:py-36">
@@ -31,7 +31,8 @@ import Hero from "@/components/Hero.astro"
       </h2>
       <Experience />
     </SectionContainer>
-
+    
+    <!--
     <SectionContainer id="proyectos">
       <h2
         class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-black/80 dark:text-white"
@@ -41,6 +42,7 @@ import Hero from "@/components/Hero.astro"
       </h2>
       <Projects />
     </SectionContainer>
+     -->
 
     <SectionContainer id="sobre-mi">
       <h2
