fix: Styles with dark - ligh schemas

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -22,7 +22,7 @@ import GitHubIcon from "@/components/icons/GitHub.astro";
     </h5>
     <Badge> Disponible para trabajar</Badge>
     <p
-      class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-purple-500 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
+      class="mt-6 text-xl text-gray-800 [&>strong]:text-purple-500 [&>strong]:font-semibold dark:text-gray-300"
     >
       Soy un apasionado de la programación y el aprendizaje continuo. Futuro
       ingeniero de software de la <strong>
@@ -37,9 +37,7 @@ import GitHubIcon from "@/components/icons/GitHub.astro";
         <MailIcon class="size-4" />
         Contáctame
       </SocialPill>
-      <SocialPill
-        href="https://www.linkedin.com/in/pa%C3%BAl-rom%C3%A1n-995a411b7/"
-      >
+      <SocialPill href="https://www.linkedin.com/in/pa%C3%BAl-rom%C3%A1n-995a411b7/">
         <LinkedInIcon class="size-4" />
         LinkedIn
       </SocialPill>
@@ -50,7 +48,7 @@ import GitHubIcon from "@/components/icons/GitHub.astro";
     </nav>
   </div>
 
-  <div class="max-w-[30%] bg-gradient-to-b from-black to-purple-500 rounded-full hidden md:block">
+  <div class="max-w-[30%] bg-gradient-to-b from-purple-300 dark:from-black dark:to-purple-500 rounded-full hidden md:block">
     <img
       class="rounded-full shadow-lg size-max"
       src="/paulr.png"
