--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Hero from "@/components/Hero.astro"
 ---
 
 <Layout
-  title="Porfolio de Paúl Román - Desarrollador FullStack"
+  title="Portafolio de Paúl Román - Desarrollador FullStack"
   description="Soy Paúl Román, un desarrollador FullStack con experiencia en el desarrollo de aplicaciones web y móviles. Conoce más sobre mi experiencia laboral, proyectos y habilidades"
 >
   <main class="px-4">
