--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -4,7 +4,7 @@
 
 <article class="flex flex-col items-center justify-center gap-8 text-gray-700 dark:text-gray-300 md:flex-row">
   <div
-    class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
+    class="[&>p]:mb-4 [&>p>strong]:text-purple-500 dark:[&>p>strong]:text-purple-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
   >
 <p>
   Mi <strong>propósito</strong> es ayudar a las personas proporcionando herramientas tecnológicas que permitan mejorar su calidad de vida y faciliten sus tareas diarias. 
